fix white spacing

--- a/new/develop/style.scss
+++ b/new/develop/style.scss
@@ -491,14 +491,11 @@ li.slick-active {
 	        align-items: center;
 	position: relative;
 	width: 100%;
-	height: 582px;
 	display: none;
-	@media (max-width: 1600px) {
-		height: auto;
+	height: auto;
 		section {
 			padding-bottom: 0;
 		}
-	}
 }
 section{
 	width: 25%;
